--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <title>Restaurant List</title>
+    <link href="/stylesheets/bootstrap.css" rel="stylesheet">
 </head>
 
 <body>
 
     {{{body}}}
-
+<script src="javascripts/bootstrap.js"></script>
 </body>
 
 </html>
