--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -1,3 +1,4 @@
+<link href="/public/stylesheets/detail.css" rel="stylesheet">
 <header>
     <!-- navigation -->
     <nav class="navbar navbar-light bg-light">
