revised bootstrap version

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,13 +4,18 @@
 <head>
     <meta charset="utf-8">
     <title>Restaurant List</title>
-    <link href="/stylesheets/bootstrap.css" rel="stylesheet">
+    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon"
+        href="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
+        type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">
 </head>
 
 <body>
 
     {{{body}}}
-<script src="javascripts/bootstrap.js"></script>
+    
+<script src="/javascripts/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
