link CSS stylesheet

--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -1,4 +1,5 @@
-<link href="/public/stylesheets/detail.css" rel="stylesheet">
+<link href="/stylesheets/detail.css" rel="stylesheet">
+
 <header>
     <!-- navigation -->
     <nav class="navbar navbar-light bg-light">
