--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -34,7 +34,7 @@
                     地址：
                 </span>
                 {{item.location}}
-                <a href="/restaurant/{{item.google_map}}" class="text-secondary" target="_blank">
+                <a href="{{item.google_map}}" class="text-secondary" target="_blank">
                     <i class="fas fa-location-arrow pr-2 fa-xs"></i>
                 </a>
             </p>
